--- a/templates/add-course.html
+++ b/templates/add-course.html
@@ -1092,43 +1092,29 @@
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                             <div class="review-content-section">
                                                 <div id="dropzone1" class="pro-ad addcoursepro">
-                                                    <form action="/upload" class="dropzone dropzone-custom needsclick addcourse" id="demo1-upload">
+                                                    <form action="/add-course/" method="post">
+                                                        {% csrf_token %}
                                                         <div class="row">
                                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                                 <div class="form-group">
-                                                                    <input name="coursename" type="text" class="form-control" placeholder="Course Name">
+                                                                    {{forms.name}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <input name="finish" id="finish" type="text" class="form-control" placeholder="Course Start Date">
+                                                                    {{forms.time}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <input name="duration" type="text" class="form-control" placeholder="Course Duration">
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input name="price" type="number" class="form-control" placeholder="Course Price">
-                                                                </div>
-                                                                <div class="form-group alert-up-pd">
-                                                                    <div class="dz-message needsclick download-custom">
-                                                                        <i class="fa fa-download edudropnone" aria-hidden="true"></i>
-                                                                        <h2 class="edudropnone">Drop image here or click to upload.</h2>
-                                                                        <p class="edudropnone"><span class="note needsclick">(This is just a demo dropzone. Selected image is <strong>not</strong> actually uploaded.)</span>
-                                                                        </p>
-                                                                        <input name="imageico" class="hd-pro-img" type="text" />
-                                                                    </div>
+                                                                    {{forms.course_price}}
                                                                 </div>
                                                             </div>
                                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                                 <div class="form-group res-mg-t-15">
-                                                                    <input name="department" type="text" class="form-control" placeholder="Department">
+                                                                    {{forms.department}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <textarea name="description" placeholder="Description"></textarea>
+                                                                    {{forms.description}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <input name="crprofessor" type="text" class="form-control" placeholder="Professor">
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input id="year" name="year" type="text" class="form-control" placeholder="Year">
+                                                                    {{forms.professor}}
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1139,6 +1125,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+                                                        {{forms.errors}}
                                                     </form>
                                                 </div>
                                             </div>
