--- a/templates/add-student.html
+++ b/templates/add-student.html
@@ -1092,82 +1092,35 @@
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                             <div class="review-content-section">
                                                 <div id="dropzone1" class="pro-ad">
-                                                    <form action="/upload" class="dropzone dropzone-custom needsclick add-professors" id="demo1-upload">
+                                                    <form action="/add-student/" method="post">
+                                                        {% csrf_token %}
                                                         <div class="row">
                                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                                 <div class="form-group">
-                                                                    <input name="firstname" type="text" class="form-control" placeholder="Full Name">
+                                                                    {{forms.full_name}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <input name="address" type="text" class="form-control" placeholder="Address">
+                                                                    {{forms.address}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <input name="mobileno" type="number" class="form-control" placeholder="Mobile no.">
+                                                                    {{forms.phone_number}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <input name="finish" id="finish" type="text" class="form-control" placeholder="Date of Birth">
+                                                                    {{forms.birth_date}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <input name="postcode" id="postcode" type="text" class="form-control" placeholder="Postcode">
-                                                                </div>
-                                                                <div class="form-group alert-up-pd">
-                                                                    <div class="dz-message needsclick download-custom">
-                                                                        <i class="fa fa-download edudropnone" aria-hidden="true"></i>
-                                                                        <h2 class="edudropnone">Drop image here or click to upload.</h2>
-                                                                        <p class="edudropnone"><span class="note needsclick">(This is just a demo dropzone. Selected image is <strong>not</strong> actually uploaded.)</span>
-                                                                        </p>
-                                                                        <input name="imageico" class="hd-pro-img" type="text" />
-                                                                    </div>
+                                                                    {{forms.postcode}}
                                                                 </div>
                                                             </div>
                                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                                                <div class="form-group">
-                                                                    <input name="department" type="text" class="form-control" placeholder="Department">
-                                                                </div>
                                                                 <div class="form-group res-mg-t-15">
-                                                                    <textarea name="description" placeholder="Description"></textarea>
+                                                                    {{forms.description}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <select name="gender" class="form-control">
-																		<option value="none" selected="" disabled="">Select Gender</option>
-																		<option value="0">Male</option>
-																		<option value="1">Female</option>
-																	</select>
+                                                                    {{forms.gender}}
                                                                 </div>
                                                                 <div class="form-group">
-                                                                    <select name="country" class="form-control">
-																			<option value="none" selected="" disabled="">Select country</option>
-																			<option value="0">India</option>
-																			<option value="1">Pakistan</option>
-																			<option value="2">Amerika</option>
-																			<option value="3">China</option>
-																			<option value="4">Dubai</option>
-																			<option value="5">Nepal</option>
-																		</select>
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <select name="state" class="form-control">
-																			<option value="none" selected="" disabled="">Select state</option>
-																			<option value="0">Gujarat</option>
-																			<option value="1">Maharastra</option>
-																			<option value="2">Rajastan</option>
-																			<option value="3">Maharastra</option>
-																			<option value="4">Rajastan</option>
-																			<option value="5">Gujarat</option>
-																		</select>
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <select name="city" class="form-control">
-																			<option value="none" selected="" disabled="">Select city</option>
-																			<option value="0">Surat</option>
-																			<option value="1">Baroda</option>
-																			<option value="2">Navsari</option>
-																			<option value="3">Baroda</option>
-																			<option value="4">Surat</option>
-																		</select>
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input name="website" type="text" class="form-control" placeholder="Website URL">
+                                                                    {{forms.group}}
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1178,6 +1131,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+                                                        {{forms.errors}}
                                                     </form>
                                                 </div>
                                             </div>
