--- a/templates/add-professor.html
+++ b/templates/add-professor.html
@@ -1082,9 +1082,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="product-payment-inner-st">
                             <ul id="myTabedu1" class="tab-review-design">
-                                <li class="active"><a href="#description">Basic Information</a></li>
-                                <li><a href="#reviews"> Account Information</a></li>
-                                <li><a href="#INFORMATION">Social Information</a></li>
+                                <li class="active"><a href="#description">O'qituvchi ma'lumotlari</a></li>
                             </ul>
                             <div id="myTabContent" class="tab-content custom-product-edit">
                                 <div class="product-tab-list tab-pane fade active in" id="description">
@@ -1107,9 +1105,6 @@
                                                                 </div>
                                                                 <div class="form-group">
                                                                     {{forms.birth_date}}
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    {{forms.postcode}}
                                                                 </div>
                                                             </div>
                                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -1134,62 +1129,6 @@
                                                         {{forms.errors}}
                                                     </form>
                                                 </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="product-tab-list tab-pane fade" id="reviews">
-                                    <div class="row">
-                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <div class="review-content-section">
-                                                <div class="row">
-                                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                        <form id="acount-infor" action="#" class="acount-infor">
-                                                            <div class="devit-card-custom">
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" name="email" placeholder="Email">
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input name="phoneno" type="number" class="form-control" placeholder="Phone">
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input name="password" type="password" class="form-control" placeholder="Password">
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input name="confarmpassword" type="password" class="form-control" placeholder="Confirm Password">
-                                                                </div>
-                                                                <a href="#" class="btn btn-primary waves-effect waves-light">Submit</a>
-                                                            </div>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="product-tab-list tab-pane fade" id="INFORMATION">
-                                    <div class="row">
-                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <div class="review-content-section">
-												<div class="row">
-													<div class="col-lg-12">
-														<div class="devit-card-custom">
-															<div class="form-group">
-																<input type="url" class="form-control" placeholder="Facebook URL">
-															</div>
-															<div class="form-group">
-																<input type="url" class="form-control" placeholder="Twitter URL">
-															</div>
-															<div class="form-group">
-																<input type="url" class="form-control" placeholder="Google Plus">
-															</div>
-															<div class="form-group">
-																<input type="url" class="form-control" placeholder="Linkedin URL">
-															</div>
-															<button type="submit" class="btn btn-primary waves-effect waves-light">Submit</button>
-														</div>
-													</div>
-												</div>
                                             </div>
                                         </div>
                                     </div>
