--- a/templates/management/attendance-success.html
+++ b/templates/management/attendance-success.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             font-family: "Segoe UI", sans-serif;
-            background: #f0f4f8;
+            background: #1d0f3c;
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -19,7 +19,7 @@
         }
 
         .success-container {
-            background: #fff;
+            background: rgba(39, 16, 88, 0.6);
             padding: 30px;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -35,7 +35,7 @@
             left: 10px;
             background: none;
             border: none;
-            color: #007bff;
+            color: #fff;
             font-size: 16px;
             text-decoration: none;
             cursor: pointer;
@@ -54,12 +54,12 @@
 
         .success-container i.fa-check-circle {
             font-size: 60px;
-            color: #28a745;
+            color: yellow;
             margin-bottom: 20px;
         }
 
         .success-container h2 {
-            color: #333;
+            color: #fff;
             margin-bottom: 10px;
         }
 
